--- a/theme/scrollbar.css
+++ b/theme/scrollbar.css
@@ -6,9 +6,9 @@
   border-radius: 8px;
   border: 4px solid transparent;
   background-clip: content-box;
-  background-color: #707070;
+  background-color: #cbd5e0;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #a0a0a0;
+  background-color: #a0aec0;
 }
