--- a/src/theme/scrollbar.css
+++ b/src/theme/scrollbar.css
@@ -4,11 +4,15 @@
 
 ::-webkit-scrollbar-thumb {
   border-radius: 8px;
-  border: 4px solid transparent;
+  border: 2px solid transparent;
   background-clip: content-box;
-  background-color: #cbd5e0;
+  background-color: rgba(255, 255, 255, 0.3);
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #a0aec0;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+::-webkit-scrollbar-thumb:active {
+  background-color: rgba(255, 255, 255, 0.7);
 }
